update frontend palylist card to correctly word wrap and fix owner name

--- a/frontend/src/components/PlaylistCard.css
+++ b/frontend/src/components/PlaylistCard.css
@@ -10,6 +10,7 @@
 
 .card-body {
     padding-left: 32px;
+    overflow-wrap: anywhere;
 }
 
 .card-img {
